# 3dgs

./: .gitignore  3D Gaussian Splatting Colab.ipynb  3DGaussianSplatting_Colab.ipynb  README.md
2dgs/: README.md  train.py
2dgs-accelerated/: 2dgs.ipynb
2dgs-accelerated/render_2dgs/: __init__.py
2dgs-accelerated/render_2dgs/cpu_omp/: CMakeLists.txt  bindings.cpp  render.cpp  setup.py
2dgs/gs2d/: __init__.py  density.py  losses.py  render.py  viz.py
2dgs_density_control/: 2dgs.ipynb
